objects/Profile_Group__mdt.object
<CustomObject>
    <description>Used to group specific profiles together</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>What process is this a part of</description>
        <inlineHelpText>What process is this record for?</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <description>The name of the group used by all records in the same group</description>
        <label>Group Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Name__c</fullName>
        <label>Profile Name</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACV Capital</fullName>
                    <default>true</default>
                    <label>ACV Capital</label>
                </value>
                <value>
                    <fullName>ACV Capital Sales</fullName>
                </value>
                <value>
                    <fullName>ACV Capital With Unwind</fullName>
                </value>
                <value>
                    <fullName>ACV Standard User</fullName>
                </value>
                <value>
                    <fullName>Analytics</fullName>
                </value>
                <value>
                    <fullName>Analytics Cloud Integration User</fullName>
                </value>
                <value>
                    <fullName>Analytics Cloud Security User</fullName>
                </value>
                <value>
                    <fullName>API Only User</fullName>
                </value>
                <value>
                    <fullName>Arbitration</fullName>
                </value>
                <value>
                    <fullName>Arbitration - With Access to Buyer/Seller Dashboard</fullName>
                </value>
                <value>
                    <fullName>B2BMA Integration User</fullName>
                </value>
                <value>
                    <fullName>Biz Ops</fullName>
                </value>
                <value>
                    <fullName>Business Development Rep</fullName>
                </value>
                <value>
                    <fullName>Chatter External User</fullName>
                </value>
                <value>
                    <fullName>Chatter Free User</fullName>
                </value>
                <value>
                    <fullName>Chatter Moderator User</fullName>
                </value>
                <value>
                    <fullName>Commercial Sales</fullName>
                </value>
                <value>
                    <fullName>Compliance Review</fullName>
                </value>
                <value>
                    <fullName>Contract Manager</fullName>
                </value>
                <value>
                    <fullName>Customer Success Team</fullName>
                </value>
                <value>
                    <fullName>Finance Standard User</fullName>
                </value>
                <value>
                    <fullName>Force.com - App Subscription User</fullName>
                </value>
                <value>
                    <fullName>FSL Optimization</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>Identity User</fullName>
                </value>
                <value>
                    <fullName>Inside Sales - Account Managers</fullName>
                </value>
                <value>
                    <fullName>Inside Sales - Account Managers Unwind</fullName>
                </value>
                <value>
                    <fullName>Inside Sales Acct. Managers Legal Review</fullName>
                </value>
                <value>
                    <fullName>Inside Sales - Activation</fullName>
                </value>
                <value>
                    <fullName>Inside Sales - Managers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Profile Group</label>
    <listViews>
        <fullName>Profile_Groups</fullName>
        <columns>Group_Name__c</columns>
        <columns>Profile_Name__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>Profile Groups</label>
    </listViews>
    <pluralLabel>Profile Groups</pluralLabel>
</CustomObject>